# career-copilot-ai

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: __init__.py  env.py
backend/app/: __init__.py  main.py
backend/app/api/: middleware.py
backend/app/api/routes/: auth.py  interviews.py  resumes.py  users.py  vacancies.py
backend/app/auth/: current_user.py  jwt.py  service.py
backend/app/core/: config.py  dependencies.py  exceptions.py  logging.py
backend/app/database/: base.py  session.py
backend/app/database/models/: __init__.py  interview.py  resume.py  user.py  vacancy.py
backend/app/repositories/: interview.py  resume.py  user.py  vacancy.py
backend/app/schemas/: auth.py  interview.py  resume.py  user.py  vacancy.py
backend/app/services/: llm.py  llm_factory.py  resume.py  resume_parsing.py  user.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_repositories.py  test_services.py
frontend/: package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx
frontend/src/pages/: DashboardPage.tsx  HomePage.tsx  InterviewPage.tsx  LoginPage.tsx  RegisterPage.tsx  ResumePage.tsx
frontend/src/services/: api.ts
frontend/src/styles/: AuthPages.css  DashboardPage.css  HomePage.css  InterviewPage.css  ResumePage.css
